@@ -2,7 +2,6 @@ plugins {
     id "com.jfrog.bintray" version "1.1"
     id "com.github.jruby-gradle.base" version "1.5.0"
     id "scala"
-    id "checkstyle"
     id "com.diffplug.gradle.spotless" version "3.27.1"
 }
 
@@ -35,26 +34,10 @@ dependencies {
     testCompile "org.embulk:embulk-test:0.9.23"
 }
 
-compileScala {
-    scalaCompileOptions.metaClass.useCompileDaemon = true
-}
-
 spotless {
     scala {
         scalafmt('2.3.2').configFile('.scalafmt.conf')
     }
-}
-
-tasks.withType(ScalaCompile) {
-    configure(scalaCompileOptions.forkOptions) {
-        memoryMaximumSize = '1g'
-        jvmArgs = ['-XX:MaxPermSize=1024m']
-    }
-}
-
-// Activating the Zinc based compiler
-tasks.withType(ScalaCompile) {
-    scalaCompileOptions.metaClass.useAnt = false
 }
 
 task classpath(type: Copy, dependsOn: ["jar"]) {
@@ -63,23 +46,6 @@ task classpath(type: Copy, dependsOn: ["jar"]) {
     into "classpath"
 }
 clean { delete "classpath" }
-
-checkstyle {
-    configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
-    toolVersion = '6.14.1'
-}
-checkstyleMain {
-    configFile = file("${project.rootDir}/config/checkstyle/default.xml")
-    ignoreFailures = true
-}
-checkstyleTest {
-    configFile = file("${project.rootDir}/config/checkstyle/default.xml")
-    ignoreFailures = true
-}
-task checkstyle(type: Checkstyle) {
-    classpath = sourceSets.main.output + sourceSets.test.output
-    source = sourceSets.main.allJava + sourceSets.test.allJava
-}
 
 task gem(type: JRubyExec, dependsOn: ["gemspec", "classpath"]) {
     jrubyArgs "-S"
@@ -109,10 +75,10 @@ task gemspec {
 Gem::Specification.new do |spec|
   spec.name          = "${project.name}"
   spec.version       = "${project.version}"
-  spec.authors       = ["Daisuke Higashi"]
+  spec.authors       = ["Daisuke Higashi", "Civitaspo"]
   spec.summary       = %[Dynamodb input plugin for Embulk]
   spec.description   = %["Loads records from Dynamodb."]
-  spec.email         = ["daisuke.develop@gmail.com"]
+  spec.email         = ["daisuke.develop@gmail.com", "civitaspo@gmail.com"]
   spec.licenses      = ["MIT"]
   spec.homepage      = "https://github.com/lulichn/embulk-input-dynamodb"
 
@@ -120,7 +86,6 @@ Gem::Specification.new do |spec|
   spec.test_files    = spec.files.grep(%r"^(test|spec)/")
   spec.require_paths = ["lib"]
 
-  #spec.add_dependency 'YOUR_GEM_DEPENDENCY', ['~> YOUR_GEM_DEPENDENCY_VERSION']
   spec.add_development_dependency 'bundler', ['~> 1.0']
   spec.add_development_dependency 'rake', ['~> 12.0']
 end
